2nd attempt to fix missing margin below last graph

--- a/src/app/WatchListStats/watchliststats.css
+++ b/src/app/WatchListStats/watchliststats.css
@@ -27,6 +27,6 @@
     flex-basis: 100%;
 }
 
-.flex-container:last-of-type {
-    margin-bottom: 100px;
+:nth-last-child(1 of .flex-container) {
+    margin-bottom: 100px !important;
 }
